fixed about spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -787,12 +787,27 @@ About Section
 .about .sub-container {
   padding: 10px 30px;
   margin: 0 50px;
+  margin-top: 50px;
   border-left: 3px solid #86B1BA;
   opacity: 0;
 }
 
+@media (max-width: 767px) { 
+  .about .sub-container {
+    padding: 0;
+    margin: 0;
+    padding-left: 10px;
+    margin-top: 50px;
+  }
+  .about h3 {
+    font-size: 14px;
+  }
+  .mobile-hide {
+    display: none;
+  }
+}
+
 .about h2 {
-  font-size: #86B1BA;
   letter-spacing: 1px;
   margin-bottom: 0;
 }
